--- a/netlify.toml
+++ b/netlify.toml
@@ -6,22 +6,10 @@
 [build.environment]
   NODE_VERSION = "18"
 
-[[functions]]
+[functions]
   directory = "netlify/functions"
 
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
-  status = 200
-
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
-
-[dev]
-  functions = "netlify/functions"
-  port = 3001 
+  status = 200 
