--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,13 @@
 [build]
   base = "client"
-  publish = "client/build"
+  publish = "build"
   command = "npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
 
 [functions]
-  directory = "netlify/functions"
+  directory = "../netlify/functions"
 
 [[redirects]]
   from = "/api/*"
