--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,12 @@
   command = "npm run build"
 
 [build.environment]
-  NODE_VERSION = "18" 
+  NODE_VERSION = "18"
+
+[functions]
+  directory = "../netlify/functions"
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200 
