--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,12 @@
 [build]
-  base = "client"
-  publish = "build"
-  command = "npm run build"
+  publish = "client/build"
+  command = "cd client && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
 
 [functions]
-  directory = "../netlify/functions"
+  directory = "netlify/functions"
 
 [[redirects]]
   from = "/api/*"
