--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,23 @@
 [build]
+  command = "npm run build"
+  functions = "netlify/functions"
   publish = "client/build"
-  command = "cd client && npm install && npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
 
 [functions]
   directory = "netlify/functions"
+  timeout = 25
 
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
-  status = 200 
+  status = 200
+
+[[headers]]
+  for = "/.netlify/functions/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Headers = "Content-Type"
+    Access-Control-Allow-Methods = "GET, POST, OPTIONS" 
