CRITICAL FIX: Remove conflicting files and fix conversation flow
 FIXES APPLIED:
 Deleted old index.js that was using conversational AI approach
 Deleted conflicting root files (promptBuilder.js, test files)
 Fixed acknowledgment flow logic in chat.js
 Fixed question progression counting
 Updated initial message to start with first question immediately
 Cleaned up package.json to remove obsolete dependencies

 ISSUE RESOLVED:
This fixes the 'Service temporarily unavailable' and conversation stopping
midway issues by ensuring only the systematic question-based approach is used.

The chat should now properly:
1. Ask location question first
2. Send acknowledgment after each answer
3. Show interactive buttons for property type, budget, timeline
4. Complete the 4-question flow without errors

--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "groweasy",
-  "version": "1.0.0",
-  "description": "GrowEasy - A configurable Claude-powered lead qualification chatbot",
-  "main": "index.js",
+  "version": "2.0.0",
+  "description": "GrowEasy - Interactive lead qualification chatbot with Netlify Functions",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node index.js",
-    "test": "node test-claude.js"
+    "build": "cd client && npm run build",
+    "test": "echo 'Testing via Netlify functions'"
   },
   "keywords": [
     "chatbot",
@@ -17,12 +15,8 @@
   ],
   "author": "GrowEasy Team",
   "license": "MIT",
-  "type": "module",
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.24.3",
-    "dotenv": "^16.3.1",
-    "express": "^4.21.2",
-    "node-fetch": "^3.3.2"
+    "@anthropic-ai/sdk": "^0.24.3"
   },
   "engines": {
     "node": ">=14.0.0"
