FIX: Correct netlify.toml build command
- Updated build command to 'cd client && npm install && npm run build'
- Fixed syntax issues causing Netlify deploy failure
- Maintains all existing functionality and UI

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "cd client && npm install && npm run build"
   functions = "netlify/functions"
   publish = "client/build"
 
